# Progrmg-Languages-Compilers

./: README.md  stack.yaml
activities/a02-hydra/src/: Lib.hs
activities/a03-calculator/src/: Lib.hs
activities/cps/src/: Lib.hs
activities/ll-parsing/src/: Lib.hs
activities/monad-activity/src/: Lib.hs
grades/: grade-report.txt
grades/midterm-1/: code-hs-cps-sub.txt  code-hs-functorWrite-05.txt  code-hs-hofUse-allEven.txt  code-hs-hofWrite-foldl.txt  code-hs-monad-write-04.txt  code-hs-recursionList-listsubtractn.txt  code-hs-recursionTail-natList.txt
grades/midterm-1/code-hs-adtTuple-tuple2pair_prodTuple/: code.hs
grades/midterm-1/code-hs-cps-sub/: code.hs
grades/midterm-1/code-hs-functorWrite-05/: code.hs
grades/midterm-1/code-hs-hofUse-allEven/: code.hs
grades/midterm-1/code-hs-hofWrite-foldl/: code.hs
grades/midterm-1/code-hs-monad-write-04/: code.hs
grades/midterm-1/code-hs-recursionList-listsubtractn/: code.hs
grades/midterm-1/code-hs-recursionTail-natList/: code.hs
mps/mp1-haskell/src/: Lib.hs  test.hs
mps/mp1-haskell/test/: Spec.hs
mps/mp2-interpreter/src/: Lib.hs
mps/mp3-cps/src/: Lib.hs
mps/mp6-type-infer/: mp6-type-infer.cabal
mps/mp6-type-infer/app/: Main.hs  Parser.hs
mps/mp6-type-infer/src/: Common.hs  Infer.hs  Parser.hs
mps/mp6-type-infer/test/: Spec.hs  Tests.hs
potd/potd-01/src/: Lib.hs
potd/potd-02/src/: Lib.hs
potd/potd-03/: potd3.cabal
potd/potd-03/src/: Lib.hs
potd/potd-04/src/: Lib.hs
potd/potd-05/: README.md
potd/potd-06/: README.md  potd7.cabal
potd/potd-11/: README.md  potd11.cabal
(+11 files in other folders)
