name:                mp6-type-infer
version:             0.1.0.0
synopsis:            Write PicoML's Type Inferencer
license:             NCSA
build-type:          Simple
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    exposed-modules:    Common, Infer
    build-depends:      base, containers
    default-language:   Haskell2010

executable main
    hs-source-dirs:     app
    main-is:            Main.hs
    other-modules:      Parser
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base, containers, mp6-type-infer
    default-language:   Haskell2010

-- TODO add tests
